kubernetes/self-signed/nginx-ingress-self-signed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  # namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
   - secretName: selfsigned-cert-tls
     hosts:
     -  martin.guru
  rules:
   - host: martin.guru
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
